objects/FSL_Add_SRT__c.object
<CustomObject>
    <fields>
        <fullName>Access_Code_A__c</fullName>
        <label>Access Code A</label>
        <precision>13</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Access_Code_B__c</fullName>
        <label>Access Code B</label>
        <precision>13</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Access_Code_C__c</fullName>
        <label>Access Code C</label>
        <precision>13</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Access_Code_D__c</fullName>
        <label>Access Code D</label>
        <precision>13</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Access_Code_R__c</fullName>
        <label>Access Code R</label>
        <precision>13</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engine_Family_Code__c</fullName>
        <label>Engine Family Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Id__c</fullName>
        <label>Equipment Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRT_DESCRIPTION__c</fullName>
        <label>SRT DESCRIPTION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRT_Type__c</fullName>
        <label>SRT Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Model__c</fullName>
        <label>Service Model</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StepId__c</fullName>
        <label>StepId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>FSL Add SRT</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SRT Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FSL Add SRTs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>